# CineSparkAPI

./: .env  .gitignore  Example.py  README.md  main.py  photodata.py  pyproject.toml  requirements.txt  scriptdata.py  shotdata.py  topdfShot.py  topdfStory.py  topdfphoto.py
